# butler

./: .gitignore  README.md  butler.tmux  compile.sh  stack.xml
bak/launch/: 1.sh
bak/src/main/java/: UseKinectLaserScan.java
brake/: brake_server.py  build.gradle  compile.sh  mainpage.dox  manifest.xml
brake/launch/: brake.launch
brake/src/main/java/butler/brake/: Brake.java
butler/: CMakeLists.txt  Commands.txt  build.gradle  lejos_test.py  manifest.xml  package.xml  recovery_behaviour_server.py
butler/launch/: 1.sh  2.sh  brake.launch  butler.launch  butler_planner.launch  butler_teleop.launch  kinect_ptu.launch  openni_kinect.launch  openni_kinect2.launch  openni_kinect_first.launch  openni_xtion.launch  openni_xtion2.launch  openni_xtion_first.launch  ptu.launch  queue.launch  talker.launch  use_kinect_laser_scan.launch  voxel.launch
butler/launch/bham_b21_launch/: b21.launch  b21.urdf  b21.xacro  tf.launch
butler/launch/navigation/: amcl.launch  amcl_hamzah.launch  basement.launch  cafe.launch  lg.launch  research-lab.launch
butler/maps/: .gitignore  bham_b21.vcg  bham_b21_kinect.vcg  lg2.yaml  lg2_obstacles.yaml  research_lab2.yaml  research_lab3.yaml
butler/nav_configs/: base_global_planner_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  costmap_common_params_no_sensor.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
butler/src/: angles.py  fake_points.py  planner.cpp
butler/src/main/java/: Main.java
butler/src/main/java/butler/butler/: Main.java  Queue.java  QueueGoal.java  Relocalise.java  UseKinectLaserScan.java
butler_executive/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
butler_executive/src/: b21.py  go_to_station.py  monitor_states.py  order_states.py  sm_global_data.py
butler_msgs/: mainpage.dox  manifest.xml
drink_sensor/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
drink_sensor/firmware/arduino_code/: arduino_code.ino
drink_sensor/launch/: drink_sensor.launch
drink_sensor/scripts/: drink_driver.py  simulator.py
drink_sensor/src/: driver.py
drink_sensor/srv/: RequestDrinksStatus.srv  SetDebounce.srv
init_ptu/: build.gradle
init_ptu/launch/: init_ptu.launch
init_ptu/src/main/java/: InitPTU.java
posters/: ADAM_STATION_A4.psd
qr/: .classpath  .gitignore  .project  CMakeLists.txt  build.gradle  compile.sh
qr/launch/: qr.launch
qr/src/: marker_server.cpp
qr/src/main/java/: Markers.java
qr/src/main/java/butler/qr/: Markers.java  ReadGoals.java  SaveGoals.java
service_manager/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
service_manager/src/: manager.py
sm_executive/: mainpage.dox  manifest.xml
sm_executive/src/: b21.py  go_to_station.py
station_nav/: CMakeLists.txt  package.xml
station_nav/scripts/: add_station.py  station_nav_server.py  test.yaml
talker/: CMakeLists.txt  package.xml  setup.py
web_code/: about.php  active_order.php  completed.php  drink.php  monitor.php  order.php  placed_order.php
web_code/data/: closures.txt  orders.txt
web_connector/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
web_connector/msg/: Order.msg
web_connector/scripts/: node.py
web_connector/src/: connector.py  node.py
web_connector/src/web_connector/: __init__.py
web_connector/srv/: GetActiveOrders.srv  GetOrders.srv  MarkActiveOrders.srv  MarkOrderComplete.srv
