<?xml version="1.0"?>
<package>
  <name>butler_executive</name>
  <version>0.0.0</version>
  <description>The butler_executive package
     Provides a state machine implementing the drink serving behaviour
  </description>

  <maintainer email="chris@todo.todo">chris</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>drink_sensor</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>smach_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>talker</build_depend>
  <build_depend>web_connector</build_depend>
  <run_depend>drink_sensor</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>smach</run_depend>
  <run_depend>smach_ros</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>talker</run_depend>
  <run_depend>web_connector</run_depend>

  <export>

  </export>
</package>