<?xml version="1.0"?>
<package>
  <name>talker</name>
  <version>0.0.0</version>
  <description>Festival based TTS node</description>
  <author>Chris</author>
  <license>BSD</license>
  <maintainer email="chris@todo.todo">chris</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>



  <export>

  </export>
</package>